--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist1/index.js",
-    "dev": "nodemon --exec ts-node index.ts"
+    "start": "node index.js",
+    "dev": "nodemon --exec ts-node index.ts",
+    
+  "build": "tsc"
+ 
+
+
   },
   "keywords": [],
   "author": "",
