--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node disaster-relief/index.js",
     "dev": "nodemon --exec ts-node index.ts",
     
   "build": "tsc"
