--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,9 +27,10 @@
   
       /* Modules */
       "module": "commonjs",                                /* Specify what module code is generated. */
-      "rootDir": "./src",
-"outDir": "./dist",
-
+     // "rootDir": "./src",
+//"outDir": "./dist",
+"rootDir": "./",            // Points to the current folder: backend
+"outDir": "../build",   
       // "rootDir": "./",                                  /* Specify the root folder within your source files. */
       // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
       // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
@@ -111,6 +112,7 @@
   
       /* Completeness */
       // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-      "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+      "skipLibCheck": true   ,                              /* Skip type checking all .d.ts files. */
+      "include": ["disaster-relief/**/*"]
     }
   }
