--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node disaster-relief/index.js",
     
- "dev": "NODE_OPTIONS='--max-old-space-size=1024' nodemon index.ts",
+ "dev": "nodemon index.ts",
 
 
     "build": "tsc"
