--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node disaster-relief/index.js",
-    
- "dev": "nodemon index.ts",
-
+    "dev": "cross-env NODE_OPTIONS=--max-old-space-size=4096 nodemon index.ts",
 
     "build": "tsc"
   },
@@ -48,6 +46,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "@types/nodemailer": "^6.4.17",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
